--- a/resume-frontend/src/components/personInfo/personInfo.css
+++ b/resume-frontend/src/components/personInfo/personInfo.css
@@ -4,6 +4,32 @@ td img {
   border-radius: 50%;
 }
 
+.personInfo-table{
+  padding: 10px 10px;
+}
+
+.personInfo-table table {
+  width: 95%;
+  text-align: center;
+  font-size: 14px;
+}
+
+.personInfo-table table i {
+  color: grey;
+}
+
+.personInfo-table .add-btn {
+  margin-left: 60%;
+  transform: translateX(-110%);
+  margin-top: 15px;
+  width: 15%;
+  height: 25px;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  background-color: #ff6600;
+}
+
 /* for modal */
 .personModal {
   position: absolute;
