--- a/resume-frontend/src/pages/login/login.css
+++ b/resume-frontend/src/pages/login/login.css
@@ -69,7 +69,7 @@
 }
 
 .login-warning button {
-  margin-left: 60px;
+  margin-left: 25%;
   font-weight: bold;
   background-color: white;
   border: none;
